Page language changed to EN + some fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Google</title>
@@ -8,11 +8,11 @@
 <body>
 
 	<header>
-		<nav>
+		<nav class="main_header">
 			<ul>
-				<li>+Ty</li>
+				<li>+You</li>
 				<li>Gmail</li>
-				<li>Grafika</li>
+				<li>Images</li>
 				<li class="apps"></li>
 				<li>sample@gmail.com</li>
 			</ul>
@@ -23,26 +23,25 @@
 		<div class="logo"></div>
 		<form action="">
 			<input type="text" text="">
-			<input type="button" value="Szukaj w Google">
-			<input type="button" value="Szczęśliwy traf">
+			<input type="button" value="Google Search">
+			<input type="button" value="I'm Feeling Lucky">
 		</form>
 	</div>
 	
 	<footer>
-		<nav>
+		<nav class="l_footer">
 			<ul>
-				<li>Reklamuj się</li>
-				<li>Dla firm</li>
-				<li>O nas</li>
+				<li>Advertising</li>
+				<li>Business</li>
+				<li>About</li>
 			</ul>
 		</nav>
 
-		<nav>
+		<nav class="r_footer">
 			<ul>
-				<li>Prywatność</li>
-				<li>Warunki</li>
-				<li>Ustawienia</li>
-				<li>Użyj Google.com</li>
+				<li>Privacy/li>
+				<li>Terms</li>
+				<li>Settings</li>
 			</ul>
 		</nav>
 	</footer>
