--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<header>
-		<nav class="main_header">
+		<nav class="head_menu">
 			<ul>
 				<li>+You</li>
 				<li>Gmail</li>
@@ -39,7 +39,7 @@
 
 		<nav class="r_footer">
 			<ul>
-				<li>Privacy/li>
+				<li>Privacy</li>
 				<li>Terms</li>
 				<li>Settings</li>
 			</ul>
