--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 	</header>
 
 	<div class="container">
-		<div class="logo"></div>
+		<div class="logo">
+			<img src="img/google.png" alt="google">
+		</div>
 		<form action="">
 			<input type="text" text="">
 			<input type="button" value="Google Search">
