More content fixes

--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
 	</header>
 
 	<div class="container">
-		<div class="logo">
-			<img src="img/google.png" alt="google">
-		</div>
-		<form action="">
-			<input type="text" text="">
-			<input type="button" value="Google Search">
-			<input type="button" value="I'm Feeling Lucky">
-		</form>
+		<center>
+			<div class="logo">
+				<img src="img/google.png" alt="google">
+			</div>
+			<form action="">
+				<div class="g-search">
+					<input class="search" type="text" text="">
+				</div>
+				<div class="buttons">
+					<input type="button" value="Google Search">
+					<input type="button" value="I'm Feeling Lucky">
+				</div>
+			</form>
+		</center>
 	</div>
 	
 	<footer>
