Button style fixed

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<input class="search" type="text" text="">
 				</div>
 				<div class="buttons">
-					<input type="button" value="Google Search">
-					<input type="button" value="I'm Feeling Lucky">
+					<input class="btn" type="button" value="Google Search">
+					<input class="btn" type="button" value="I'm Feeling Lucky">
 				</div>
 			</form>
 		</center>
