mic icon added to the search bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 			</div>
 			<form action="">
 				<div class="g-search">
-					<input class="search" type="text" text="">
+					<input class="search" type="search" text="">
+					<div class="mic">
+						<img class="v_search" alt="voice search" src="./img/mic.gif" />
+					</div>
 				</div>
 				<div class="buttons">
 					<input class="btn" type="button" value="Google Search">
