--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<title>Google</title>
 	<link rel="stylesheet" href="./css/stylesheet.css">
 </head>
@@ -13,7 +15,7 @@
 				<li>+You</li>
 				<li>Gmail</li>
 				<li>Images</li>
-				<li class="apps"></li>
+				<li><img src="img/th.png" class="apps-ico" alt="apps"></li>
 				<li>sample@gmail.com</li>
 			</ul>
 		</nav>
