--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<form action="">
 				<div class="g-search">
-					<input class="search" type="search" text="">
+					<input class="search" type="search" text="" autofocus="autofocus">
 					<div class="mic">
 						<img class="v_search" alt="voice search" src="./img/mic.gif" />
 					</div>
