Search field display fix

--- a/index.html
+++ b/index.html
@@ -26,18 +26,23 @@
 			<div class="logo">
 				<img src="img/google.png" alt="google">
 			</div>
+
 			<form action="">
+
 				<div class="g-search">
-					<input class="search" type="search" text="" autofocus="autofocus">
+					<input class="search" type="text" text="" autofocus="autofocus">
 					<div class="mic">
 						<img class="v_search" alt="voice search" src="./img/mic.gif" />
 					</div>
 				</div>
+
 				<div class="buttons">
 					<input class="btn" type="button" value="Google Search">
 					<input class="btn" type="button" value="I'm Feeling Lucky">
 				</div>
+
 			</form>
+
 		</center>
 	</div>
 	
