Voice search icon poisition fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li>Gmail</li>
 				<li>Images</li>
 				<li><img src="img/th.png" class="apps-ico" alt="apps"></li>
-				<li>sample@gmail.com <span class="tg-arrow"></span></li>
+				<li>mat.staszczyk@gmail.com <span class="tg-arrow"></span></li>
 			</ul>
 		</nav>
 	</header>
