Preparations for results page implementation

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 				<img src="img/google.png" alt="google">
 			</div>
 
-			<form action="">
+			<form action="" method="GET" name="search">
 
 				<div class="g-search">
-					<input class="search" type="text" text="" autofocus="autofocus">
+					<input class="search-input" type="text" text="" autofocus="autofocus">
 					<div class="mic">
 						<img class="v_search" alt="voice search" src="./img/mic.gif" />
 					</div>
 				</div>
 
 				<div class="buttons">
-					<input class="btn" type="button" value="Google Search">
-					<input class="btn" type="button" value="I'm Feeling Lucky">
+					<input class="btn" href="results.html" type="submit" value="Google Search">
+					<input class="btn" href="https://www.google.com/doodles" type="submit" value="I'm Feeling Lucky">
 				</div>
 
 			</form>
