Form submit redirection fixed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<img src="img/google.png" alt="google">
 			</div>
 
-			<form action="" method="GET" name="search">
+			<form action="results.html" method="GET" name="search">
 
 				<div class="g-search">
 					<input class="search-input" type="text" text="" autofocus="autofocus">
