--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<title>Google</title>
-	<link rel="stylesheet" href="./css/stylesheet.css">
+	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="./css/google.css">
 </head>
 <body>
 
 	<header>
 		<nav class="head_menu">
 			<ul>
-				<li>+You</li>
-				<li>Gmail</li>
-				<li>Images</li>
+				<li><a href="#">+You</a></li>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#">Images</a></li>
 				<li><img src="img/th.png" class="apps-ico" alt="apps"></li>
 				<li>mat.staszczyk@gmail.com <span class="tg-arrow"></span></li>
 			</ul>
@@ -49,17 +50,17 @@
 	<footer>
 		<nav class="l_footer">
 			<ul>
-				<li>Advertising</li>
-				<li>Business</li>
-				<li>About</li>
+				<li><a href="#">Advertising</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">About</a></li>
 			</ul>
 		</nav>
 
 		<nav class="r_footer">
 			<ul>
-				<li>Privacy</li>
-				<li>Terms</li>
-				<li>Settings</li>
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Terms</a></li>
+				<li><a href="#">Settings</a></li>
 			</ul>
 		</nav>
 	</footer>
