Header section works finished

--- a/results.html
+++ b/results.html
@@ -12,13 +12,25 @@
 	
 	<header>
 
-		<img class='google-home'>
 		<div class="google-search">
-			<input type='text'>
-			<input type='button'>
+			<a href='index.html' class='home-logo'></a>
+			
+			<div class="g-search">
+				<input class="search-input" type="text" text="">
+				<div class="mic">
+					<img class="v_search" alt="voice search" src="./img/mic.gif" />					
+				</div>
+			</div>
+			<button class='search-btn'>
+				<span class='search-mg'></span>
+			</button>
+
+		</div>
+
+		<div class="app-menu">
 			<ul>
-				<li><img src="img/th.png" class="apps-ico" alt="apps"></li>
-				<li>mat.staszczyk@gmail.com <span class="tg-arrow"></span></li>
+				<li><a href="#" class="apps"></a></li>
+				<li class="acc">mat.staszczyk@gmail.com <span class="tg-arrow"></span></li>
 			</ul>
 		</div>
 
@@ -88,7 +100,15 @@
 	</nav>
 
 	<footer>
-		<div class="location-info"></div>
+		<div class="location-info">
+			<ul>
+				<li>Town</li>
+				<li>From your Internet address</li>
+				<li>Use precise location</li>
+				<li>Learn more</li>
+			</ul>
+		</div>
+
 		<nav class="footer-menu">
 			<ul>
 				<li>Help</li>
