Footer works finished

--- a/results.html
+++ b/results.html
@@ -100,23 +100,25 @@
 	</nav>
 
 	<footer>
-		<div class="location-info">
-			<ul>
-				<li>Town</li>
-				<li>From your Internet address</li>
-				<li>Use precise location</li>
-				<li>Learn more</li>
-			</ul>
-		</div>
+		<div class="footer-section">
+			<div class="location-info">
+				<ul>
+					<li class='location-main'><span class="point circle"></span> Town</li>
+					<li class='location-main'><span class="point">-</span> From your Internet address</li>
+					<li><span class="point">-</span> Use precise location</li>
+					<li><span class="point">-</span> Learn more</li>
+				</ul>
+			</div>
 
-		<nav class="footer-menu">
-			<ul>
-				<li>Help</li>
-				<li>Send feedback</li>
-				<li>Privacy</li>
-				<li>Terms</li>
-			</ul>
-		</nav>
+			<nav class="footer-menu">
+				<ul>
+					<li>Help</li>
+					<li>Send feedback</li>
+					<li>Privacy</li>
+					<li>Terms</li>
+				</ul>
+			</nav>
+		</div>
 	</footer>
 	
 </body>
