Content-fitering section finished

--- a/results.html
+++ b/results.html
@@ -39,21 +39,19 @@
 	<div class='top-menu'>
 		
 		<div class="left-menu">
-			<ul>
-				<li>Web</li>
-				<li>Videos</li>
-				<li>Images</li>
-				<li>News</li>
-				<li>Maps</li>
-				<li>More <span class="tg-arrow"></span></li>
-				<li>Search tools</li>
-			</ul>
+				<div class='content-menu active'>Web</div>
+				<div class='content-menu'>Videos</div>
+				<div class='content-menu'>Images</div>
+				<div class='content-menu'>News</div>
+				<div class='content-menu'>Maps</div>
+				<div class='content-menu'>More <span class="tg-arrow"></span></div>
+				<div class='content-menu'>Search tools</div>
 		</div>
 
 		<div class='right-menu'>
-			<button class='filter private'></button>
-			<button class='filter public'></button>
-			<button class='settings'></button>
+			<button class='button filter private enabled'><span class='priv'></span></button>
+			<button class='button filter public'><span class="globe"></span></button>
+			<button class='button settings'><span class="setts"></span></button>
 		</div>
 
 	</div>
