Main content update

--- a/results.html
+++ b/results.html
@@ -57,8 +57,9 @@
 	</div>
 
 	<div class='search-results'>
-		<p class='note'>About 4,300,000 results (0.31 seconds)</p>
-
+		
+				<div class='note'><p>About 4,300,000 results (0.31 seconds)</p></div>
+		
 		<div class='rs-info'>
 			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
 			<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
@@ -72,7 +73,6 @@
 			<p></p>
 		</div>
 
-	</div>
 
 	<nav class='bottom-list'>
 		<div class='rs-pages'>
@@ -96,6 +96,8 @@
 			</table>
 		</div>
 	</nav>
+
+	</div>
 
 	<footer>
 		<div class="footer-section">
