Results content display and pages navigation update

--- a/results.html
+++ b/results.html
@@ -58,44 +58,52 @@
 
 	<div class='search-results'>
 		
-				<div class='note'><p>About 4,300,000 results (0.31 seconds)</p></div>
+		<div class='note'><p>About 4,300,000 results (0.31 seconds)</p></div>
 		
-		<div class='rs-info'>
-			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-			<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-			<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+		<div class="results-main">
+
+			<div class='rs-info'>
+				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
+				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+			</div>
+
 		</div>
 
 		<div class='rs-more'>
-			<h3></h3>
-			<p></p>
-			<p></p>
-			<p></p>
+			<div class='propositions'>
+				<h3>Searches related to lorem ipsum</h3>
+				<a href="#">lorem ipsum <strong>text</strong></a>
+				<a href="#">lorem ipsum <strong>meaning</strong></a>
+				<a href="#">lorem ipsum <strong>dummy text</strong></a>
+				<a href="#">lorem ipsum <strong>translation</strong></a>
+			</div>
 		</div>
 
 
-	<nav class='bottom-list'>
-		<div class='rs-pages'>
-			<table class='pages'>
-				<tbody>
-					<tr>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-						<td><span></span></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</nav>
+		<nav class='bottom-list'>
+			<div class='rs-pages'>
+				<table class='pages'>
+					<tbody>
+						<tr>
+							<td><span class='bG'>"1"</span></td>
+							<td><span class='fo'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='o'></span></td>
+							<td><span class='gle'></span><span class='next'>Next</span></td>
+
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</nav>
 
 	</div>
 
