Critical footer fix

--- a/results.html
+++ b/results.html
@@ -86,17 +86,17 @@
 				<table class='pages'>
 					<tbody>
 						<tr>
-							<td><span class='bG'>"1"</span></td>
-							<td><span class='fo'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
-							<td><span class='o'></span></td>
+							<td><span class='bG'></span></td>
+							<td><span class='fo'></span>1</td>
+							<td><span class='o'></span>2</td>
+							<td><span class='o'></span>3</td>
+							<td><span class='o'></span>4</td>
+							<td><span class='o'></span>5</td>
+							<td><span class='o'></span>6</td>
+							<td><span class='o'></span>7</td>
+							<td><span class='o'></span>8</td>
+							<td><span class='o'></span>9</td>
+							<td><span class='o'></span>10</td>
 							<td><span class='gle'></span><span class='next'>Next</span></td>
 
 						</tr>
