Graphical navigation box completed

--- a/results.html
+++ b/results.html
@@ -87,17 +87,17 @@
 					<tbody>
 						<tr>
 							<td><span class='bG'></span></td>
-							<td><span class='fo'></span>1</td>
-							<td><span class='o'></span>2</td>
-							<td><span class='o'></span>3</td>
-							<td><span class='o'></span>4</td>
-							<td><span class='o'></span>5</td>
-							<td><span class='o'></span>6</td>
-							<td><span class='o'></span>7</td>
-							<td><span class='o'></span>8</td>
-							<td><span class='o'></span>9</td>
-							<td><span class='o'></span>10</td>
-							<td><span class='gle'></span><span class='next'>Next</span></td>
+							<td><span class='fo'></span><span class='actual'>1</span></td>
+							<td><a href='#' ><span class='o'></span>2</a></td>
+							<td><a href='#' ><span class='o'></span>3</a></td>
+							<td><a href='#' ><span class='o'></span>4</a></td>
+							<td><a href='#' ><span class='o'></span>5</a></td>
+							<td><a href='#' ><span class='o'></span>6</a></td>
+							<td><a href='#' ><span class='o'></span>7</a></td>
+							<td><a href='#' ><span class='o'></span>8</a></td>
+							<td><a href='#' ><span class='o'></span>9</a></td>
+							<td><a href='#' ><span class='o'></span>10</a></td>
+							<td><a href='#' ><span class='gle'></span><span class='next'>Next</span></a></td>
 
 						</tr>
 					</tbody>
