Search results design implementation finished

--- a/results.html
+++ b/results.html
@@ -63,65 +63,58 @@
 		<div class="results-main">
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
 
 			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
+				<h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing...</a></h3>
+				<div class='web-adr'><cite class='www'>www.lipsum.com </cite> <span class="tg-arrow"></span></div>
+				<p class='rs-about'><span class='date'>Mar 28, 2015 - </span> Lorem ipsum <em>dolor</em> sit amet, consectetur adipisicing elit. Pariatur soluta <em>natus</em> laboriosam, sapiente ad suscipit eligendi <em>ducimus</em> consectetur nobis ...</p>
 			</div>
-
-			<div class='rs-info'>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing...</h3>
-				<div class='web-adr'><cite>www.lipsum.com/</cite> <span class="tg-arrow"></span></div>
-				<p class='rs-about'><span class='date'>Mar 28, 2015</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium vel facilis corrupti quis nisi quod ...</p>
-			</div>
-
 
 		</div>
 
