--- a/results.html
+++ b/results.html
@@ -161,17 +161,17 @@
 				<ul>
 					<li class='location-main'><span class="point circle"></span> Town</li>
 					<li class='location-main'><span class="point">-</span> From your Internet address</li>
-					<li><span class="point">-</span> Use precise location</li>
-					<li><span class="point">-</span> Learn more</li>
+					<li><span class="point">-</span> <a href='#'>Use precise location </a></li>
+					<li><span class="point">-</span> <a href='#'>Learn more</a></li>
 				</ul>
 			</div>
 
 			<nav class="footer-menu">
 				<ul>
-					<li>Help</li>
-					<li>Send feedback</li>
-					<li>Privacy</li>
-					<li>Terms</li>
+					<li><a href='#'>Help</a></li>
+					<li><a href='#'>Send feedback</a></li>
+					<li><a href='#'>Privacy</a></li>
+					<li><a href='#'>Terms</a></li>
 				</ul>
 			</nav>
 		</div>
