--- a/results.html
+++ b/results.html
@@ -40,11 +40,11 @@
 		
 		<div class="left-menu">
 				<div class='content-menu active'>Web</div>
-				<div class='content-menu'>Videos</div>
-				<div class='content-menu'>Images</div>
-				<div class='content-menu'>News</div>
-				<div class='content-menu'>Maps</div>
-				<div class='content-menu'>More <span class="tg-arrow"></span></div>
+				<div class='content-menu'><a href='#' class='link'>Videos</a></div>
+				<div class='content-menu'><a href='#' class='link'>Images</a></div>
+				<div class='content-menu'><a href='#' class='link'>News</a></div>
+				<div class='content-menu'><a href='#' class='link'>Maps</a></div>
+				<div class='content-menu'><a href='#' class='link'>More <span class="tg-arrow"></span></a></div>
 				<div class='content-menu'>Search tools</div>
 		</div>
 
@@ -161,17 +161,17 @@
 				<ul>
 					<li class='location-main'><span class="point circle"></span> Town</li>
 					<li class='location-main'><span class="point">-</span> From your Internet address</li>
-					<li><span class="point">-</span> <a href='#'>Use precise location </a></li>
-					<li><span class="point">-</span> <a href='#'>Learn more</a></li>
+					<li><span class="point">-</span> <a href='#' class='link'>Use precise location </a></li>
+					<li><span class="point">-</span> <a href='#' class='link'>Learn more</a></li>
 				</ul>
 			</div>
 
 			<nav class="footer-menu">
 				<ul>
-					<li><a href='#'>Help</a></li>
-					<li><a href='#'>Send feedback</a></li>
-					<li><a href='#'>Privacy</a></li>
-					<li><a href='#'>Terms</a></li>
+					<li><a href='#' class='link'>Help</a></li>
+					<li><a href='#' class='link'>Send feedback</a></li>
+					<li><a href='#' class='link'>Privacy</a></li>
+					<li><a href='#' class='link'>Terms</a></li>
 				</ul>
 			</nav>
 		</div>
