Search tools hover button effect added

--- a/results.html
+++ b/results.html
@@ -45,7 +45,7 @@
 				<div class='content-menu'><a href='#' class='link'>News</a></div>
 				<div class='content-menu'><a href='#' class='link'>Maps</a></div>
 				<div class='content-menu'><a href='#' class='link'>More <span class="tg-arrow"></span></a></div>
-				<div class='content-menu'>Search tools</div>
+				<div class='content-menu'><a href='#' class='search-settings'>Search tools</a></div>
 		</div>
 
 		<div class='right-menu'>
