Minor link design fix

--- a/results.html
+++ b/results.html
@@ -30,7 +30,7 @@
 		<div class="app-menu">
 			<ul>
 				<li><a href="#" class="apps"></a></li>
-				<li class="acc">mat.staszczyk@gmail.com <span class="tg-arrow"></span></li>
+				<li class="acc"><a href='#' class='link'>mat.staszczyk@gmail.com <span class="tg-arrow"></span></a></li>
 			</ul>
 		</div>
 
