Apps menu style fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li><a href="#">+You</a></li>
 				<li><a href="#">Gmail</a></li>
 				<li><a href="#">Images</a></li>
-				<li><img src="img/th.png" class="apps-ico" alt="apps"></li>
+				<li><a href="#" class="apps"></a></li>
 				<li>mat.staszczyk@gmail.com <span class="tg-arrow"></span></li>
 			</ul>
 		</nav>
